OO-4345: distinct count the courses